#  Edit the following fields to match your project

[project]
name = "comfyui-simple-padding"
description = "Simple box padding for Comfyui [Simple Padding](https://github.com/alexlawford/comfyui-simple-padding)."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = [""]

[project.urls]
Repository = "https://github.com/alexlawford/comfyui-simple-padding"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alexlawford"
DisplayName = "ComfyUI-Simple-Padding"
Icon = ""